fixed gutter and spacing

--- a/css/sass-styles.css
+++ b/css/sass-styles.css
@@ -745,8 +745,8 @@ li#primary-search-box.nav-custom-search.menu-item {
 .top-main-page-container .main-page-col-third {
   float: left;
   display: block;
-  margin-right: 2.35765%;
-  width: 31.76157%;
+  margin-right: 0.73174%;
+  width: 32.84551%;
 }
 .top-main-page-container .main-page-col-third:last-child {
   margin-right: 0;
@@ -755,7 +755,7 @@ li#primary-search-box.nav-custom-search.menu-item {
   .top-main-page-container .main-page-col-third {
     float: left;
     display: block;
-    margin-right: 7.42297%;
+    margin-right: 2.22783%;
     width: 100%;
     margin-top: 10px;
   }
@@ -772,8 +772,8 @@ li#primary-search-box.nav-custom-search.menu-item {
   margin-right: auto;
   float: left;
   display: block;
-  margin-right: 2.35765%;
-  width: 65.88078%;
+  margin-right: 0.73174%;
+  width: 66.42275%;
 }
 .top-main-page-container .main-page-col-two-thirds::after {
   clear: both;
@@ -787,7 +787,7 @@ li#primary-search-box.nav-custom-search.menu-item {
   .top-main-page-container .main-page-col-two-thirds {
     float: left;
     display: block;
-    margin-right: 7.42297%;
+    margin-right: 2.22783%;
     width: 100%;
     margin-top: 10px;
   }
@@ -798,8 +798,8 @@ li#primary-search-box.nav-custom-search.menu-item {
 .top-main-page-container .main-page-col-quarter {
   float: left;
   display: block;
-  margin-right: 2.35765%;
-  width: 23.23176%;
+  margin-right: 0.73174%;
+  width: 24.45119%;
 }
 .top-main-page-container .main-page-col-quarter:last-child {
   margin-right: 0;
@@ -808,7 +808,7 @@ li#primary-search-box.nav-custom-search.menu-item {
   .top-main-page-container .main-page-col-quarter {
     float: left;
     display: block;
-    margin-right: 7.42297%;
+    margin-right: 2.22783%;
     width: 100%;
     margin-top: 10px;
   }
@@ -822,8 +822,8 @@ li#primary-search-box.nav-custom-search.menu-item {
 .top-main-page-container .top-side-by-side-section .main-page-col-half {
   float: left;
   display: block;
-  margin-right: 2.35765%;
-  width: 48.82117%;
+  margin-right: 0.73174%;
+  width: 49.63413%;
 }
 .top-main-page-container .top-side-by-side-section .main-page-col-half:last-child {
   margin-right: 0;
@@ -832,8 +832,8 @@ li#primary-search-box.nav-custom-search.menu-item {
   .top-main-page-container .top-side-by-side-section .main-page-col-half {
     float: left;
     display: block;
-    margin-right: 7.42297%;
-    width: 153.71149%;
+    margin-right: 2.22783%;
+    width: 151.11391%;
     margin-top: 10px;
   }
   .top-main-page-container .top-side-by-side-section .main-page-col-half:last-child {
@@ -942,25 +942,13 @@ h3.yellow-text {
   font-size: 13px;
 }
 
-#discount-section-1 {
-  margin-right: 7px;
-}
-
-#discount-section-2 {
-  margin: 0 10px;
-}
-
-#discount-section-3 {
-  margin-left: 7px;
-}
-
 .discount-section:hover {
   font-size: 14px;
   text-shadow: 2px 2px 2px #969696;
 }
 
 .category-images-homepage {
-  width: 250px;
+  width: 300px;
   height: 300px;
 }
 
