--- a/sass/_2.Home-page.scss
+++ b/sass/_2.Home-page.scss
@@ -200,7 +200,7 @@ h3.yellow-text {
 //Main Page Ornamental Stone Products Section
 
 .category-images-homepage {
-  width: 250px;
+  width: 300px;
   height: 300px;
 }
 
